rolandobernal/css/stylish-portfolio.css
/* ... */
.img-portfolio:hover {
		background: #fff;
		cursor: pointer;
}

.proj-details {
		font-size: 1em;
		text-align: left;
		list-style: none;
		color: #333;
}


.img-modal {
		width: 100%;
		vertical-align: center;
}

.project-title {
		color: #dd3b2a;
}

.project-border-1 {
	border-style: solid;
	border-color: #fff;
	border-width: 1px;
	background-color: #232323;
}

.project-border-2 {
	border-top-style: solid;
	border-right-style: solid;
	border-bottom-style: solid;
	border-left-style: none;
	border-color: #FFF;
	border-width: 1px;
	background-color: #232323;
}

.project-border-3 {
	border-top-style: none;
	border-right-style: solid;
	border-bottom-style: solid;
	border-left-style: solid;
	border-color: #FFF;
	border-width: 1px;
	background-color: #232323;
}

.project-border-4 {
	border-top-style: none;
	border-right-style: solid;
	border-bottom-style: solid;
	border-left-style: none;
	border-color: #FFF;
	border-width: 1px;
	background-color: #232323;
}

.project-border-5 {
	border-top-style: none;
	border-right-style: solid;
	border-bottom-style: solid;
	border-left-style: solid;
	border-color: #FFF;
	border-width: 1px;
	background-color: #232323;
}

.project-border-6 {
	border-top-style: none;
	border-right-style: solid;
	border-bottom-style: solid;
	border-left-style: none;
	border-color: #FFF;
	border-width: 1px;
	background-color: #232323;
}




/* Call to Action */

.call-to-action {
		background-color: #337ab7;
		padding: 50px 0;
}

.call-to-action .btn {
		margin: 10px;
}



/* Map */

/*.map {
		height: 230px;
		background: url(../img/RB-logo2.png) no-repeat center center scroll;
		background-color: #f3f3f3;
}*/


.img-circle {
	margin-top:18px;
	height:130px;
	width:130px;
}

@media(max-width:768px) {
		.map {
				height: 75%;
		}
}

/* Footer */

footer {
		padding-top: 20px;
		padding-bottom: 180px;
		background-color: #f3f3f3;
}

#contact {
		height: 10%;
}

.rb-footer {
		color: #dd3b2a;
}

.social a,
.phone-email a {
		color: #333;
}

a:hover,
a:focus,
a:active {
		color: #dd3b2a;
		text-decoration: none;
}

/*Social a the bottom fo the page*/
.social-bottom {
	margin-top: 50px;
	width: 100%;
	height: 70px;
	display: block;
	z-index: 2;
}
.social-bottom ul {
	margin: 20px 20px;

}

.social-bottom ul li {
		display: inline-block;
		list-style-type: none;
		padding: 5px 5px;
		margin: 20px;
}

.social-bottom ul li a i.fa {
	font-size: 50px;
}

#linkedin:hover,
#linkedin:focus,
#linkedin:active,
.fa-linkedin:hover,
.fa-linkedin:focus,
.fa-linkedin:active {
		color: #FFF;
		background-color: #007bb6;
		border-radius: 4px;
}

#twitter:hover,
#twitter:focus,
#twitter:active,
.fa-twitter:hover,
.fa-twitter:focus,
.fa-twitter:active {
		color: #FFF;
		background-color: #55acee;
		border-radius: 4px;
}


#google-plus:hover,
#google-plus:focus,
#google-plus:active,
.fa-google-plus:hover,
.fa-google-plus:focus,
.fa-google-plus:active {
		color: #FFF;
		background-color: #dd4b39;
		border-radius: 4px;
}

#github:hover,
#github:focus,
#github:active,
.fa-github:hover,
.fa-github:focus,
.fa-github:active {
		color: #fff;
		background-color: #444;
		border-radius: 4px;
}

#email:hover,
#email:focus,
#email:active,
.fa-envelope-o:hover,
.fa-envelope-o:focus,
.fa-envelope-o:active {
		color: #fff;
		background-color: #90BF88;
		border-radius: 4px;
}

@media(max-width:767px) {

		.project-border-1 {
			border-top-style: solid;
			border-right-style: none;
			border-bottom-style: solid;
			border-left-style: none;
			border-color: #dd4b39;
			border-width: 1px;
			background-color: #f3f3f3;
		}

		.project-border-2,
		.project-border-3,
		.project-border-4,
		.project-border-5,
		.project-border-6 {
			border-top-style: none;
			border-right-style: none;
			border-bottom-style: solid;
			border-left-style: none;
			border-color: #dd4b39;
			border-width: 1px;
			background-color: #f3f3f3;
		}



}

